syntax = "proto3";

package fanout.tweet.v1;

service TweetService {
    rpc CreateTweet (CreateTweetRequest) returns (CreateTweetResponse) {}
}

message CreateTweetRequest {
    string id = 1;
    string content = 2;
    string user_id = 3;
    string uuid = 4;
    string created_at = 5;
    int32 likes_count = 6;
    int32 retweets_count = 7;
}

message CreateTweetResponse {}